--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="wrapper">
-        <form action="Index.html">
+        <form action="index.html">
             <!--Form action is used to create the login format -->
 
             <h1>Login</h1>
